2012-03-23   Diego Novillo  <dnovillo@google.com>

	* gimple-lang.c (def_builtin_1): Call set_builtin_decl.
	Adjust to new builtin interfaces in 4.8.
	* parser.c (gimple_init): Adjust call to build_common_tree_nodes.
	Remove call to build_common_tree_nodes_2.

2012-03-08  Sandeep Soni  <soni.sandeepb@gmail.com>

	* parser.c (gl_lex_token): For every CPP_LSHIFT and CPP_RSHIFT tokens,
	split the token into two discrete CPP_LESS and CPP_GREATER tokens
	respectively.
	(gl_split_token): New. The split function for the case above.
	(gl_token_is_of_type): New. Checks if the tokens type is the expected
	type.
	(gp_parse_var_decl): Changing consumption of CPP_LSHIFT and CPP_RSHIFT
	tokens into CPP_LESS and CPP_GREATER tokens.
	(gp_parse_record_type): Ditto.
	(gp_parse_union_type): Ditto.
	(gp_parse_cond_stmt): Ditto.
	(gp_parse_goto_stmt): Ditto.
	(gp_parse_label_stmt): Ditto.
	(gp_parse_switch_stmt): Ditto.

2012-03-01  Sandeep Soni  <soni.sandeepb@gmail.com>

	* parser.c : Include hashtab.h.
	(gimple_symtab): New. The symbol table.
	(gimple_symtab_entry_hash): New.
	(gimple_symtab_eq_hash): New.
	(gimple_symtab_entry_marked_p):New.
	(gimple_symtab_maybe_init_hash_table):New.
	(gimple_symtab_register_decl):New.
	(gimple_register_var_decl_in_symtab):New.
	(gp_parse_var_decl): Put declaration in the symbol table.
	(gimple_main): Creates the symbol table
	* parser.h : (struct gimple_symtab_entry_def): New.

2011-10-11  Sandeep Soni  <soni.sandeepb@gmail.com>

	* parser.c (gp_parse_var_decl): Fixed a bug for the 
	missing symbol 'CPP_LESS' in the 'INTEGER_TYPE' declaration.

2011-05-13  Sandeep Soni  <soni.sandeepb@gmail.com>

	* parser.c (gl_gimple_code_for_token): New.
	(gp_parse_var_decl): New.
	(gp_parse_decl): New.
	(gp_parse): Addition of call to new functions.

2011-05-05  Diego Novillo  <dnovillo@google.com>

	* gimple-lang.c (gimple_attribute_table): Add initializer for
	new field 'affects_type_identity'.
	(gimple_format_attribute_table): Likewise.
